[gd_scene load_steps=14 format=3 uid="uid://c2ef34j7ahkgn"]

[ext_resource type="Script" path="res://SoHyeongBeen/start_scene.gd" id="1_i7o7j"]
[ext_resource type="Texture2D" uid="uid://def87dsgadcx0" path="res://SoHyeongBeen/캡처_2024_12_18_12_18_05_852.png" id="1_s08mc"]
[ext_resource type="AudioStream" uid="uid://bu66x18ye5yxh" path="res://SoHyeongBeen/sounds/Starry Quest Stage2 20minutes 100bpm.mp3" id="2_2rsqr"]
[ext_resource type="Texture2D" uid="uid://cjgrs5ewxo6ai" path="res://SoHyeongBeen/ui pack/5 Logo/Logo2.png" id="2_muxn6"]
[ext_resource type="FontFile" uid="uid://c6kce6fci7l3n" path="res://SoHyeongBeen/ui pack/10 Font/CyberpunkCraftpixPixel.otf" id="3_j0531"]
[ext_resource type="Script" path="res://SoHyeongBeen/control.gd" id="4_a8k66"]
[ext_resource type="Texture2D" uid="uid://cm7f23te0r7jo" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_05.png" id="5_injyp"]
[ext_resource type="Texture2D" uid="uid://biy5842hc4yim" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_06.png" id="6_75no1"]
[ext_resource type="Texture2D" uid="uid://csap21qbr7x27" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_07.png" id="7_ehd31"]
[ext_resource type="Texture2D" uid="uid://cd1en03cq6nej" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_01.png" id="8_wilbo"]
[ext_resource type="Texture2D" uid="uid://duwsaco3xewiy" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_02.png" id="9_epewn"]
[ext_resource type="Texture2D" uid="uid://dwwgmw50ktvap" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_03.png" id="10_0l1n5"]
[ext_resource type="Texture2D" uid="uid://imj4thtp7nwt" path="res://SoHyeongBeen/ui pack/1 Frames/Interface windows.png" id="13_3e814"]

[node name="StartScene" type="CanvasLayer"]
script = ExtResource("1_i7o7j")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2rsqr")

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="캡처20241218121805852" type="Sprite2D" parent="BoxContainer"]
position = Vector2(16, 18)
scale = Vector2(1.08214, 1.08214)
texture = ExtResource("1_s08mc")

[node name="Logo2" type="Sprite2D" parent="BoxContainer"]
texture_filter = 5
texture_repeat = 1
position = Vector2(12, -130)
scale = Vector2(2.1013, 2.1013)
texture = ExtResource("2_muxn6")

[node name="Label" type="Label" parent="BoxContainer/Logo2"]
texture_filter = 5
texture_repeat = 1
offset_left = -146.0
offset_top = -36.0
offset_right = 151.0
offset_bottom = 3.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_j0531")
theme_override_font_sizes/font_size = 36
text = "Time Rewinder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="BoxContainer/Logo2"]
texture_filter = 5
texture_repeat = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.721
offset_top = -24.1873
offset_right = -65.7213
offset_bottom = -7.18726
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_j0531")
theme_override_font_sizes/font_size = 12
text = "TEAM 7 김병욱 박지헌 소형빈 정재훈"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Control" parent="BoxContainer"]
layout_mode = 2

[node name="ButtonSystem" type="Control" parent="BoxContainer/Buttons"]
anchors_preset = 0
offset_left = -111.0
offset_top = 23.0
offset_right = -111.0
offset_bottom = 23.0
scale = Vector2(2.435, 2.435)
script = ExtResource("4_a8k66")

[node name="activeSprite" type="Node2D" parent="BoxContainer/Buttons/ButtonSystem"]

[node name="leftSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem/activeSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(16, 16)
texture = ExtResource("5_injyp")

[node name="middleSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem/activeSprite"]
texture_filter = 3
texture_repeat = 1
position = Vector2(51, 16)
scale = Vector2(2.245, 1)
texture = ExtResource("6_75no1")

[node name="rightSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem/activeSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(87, 16)
texture = ExtResource("7_ehd31")

[node name="normalSprite" type="Node2D" parent="BoxContainer/Buttons/ButtonSystem"]

[node name="leftSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem/normalSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(16, 16)
texture = ExtResource("8_wilbo")

[node name="middleSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem/normalSprite"]
texture_filter = 3
texture_repeat = 1
position = Vector2(51, 16)
scale = Vector2(2.245, 1)
texture = ExtResource("9_epewn")

[node name="rightSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem/normalSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(87, 16)
texture = ExtResource("10_0l1n5")

[node name="button" type="Button" parent="BoxContainer/Buttons/ButtonSystem"]
texture_filter = 5
texture_repeat = 1
layout_mode = 1
offset_right = 103.0
offset_bottom = 32.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.76662, 0.76662, 0.76662, 1)
theme_override_fonts/font = ExtResource("3_j0531")
text = "start"
flat = true

[node name="ButtonSystem2" type="Control" parent="BoxContainer/Buttons"]
visible = false
anchors_preset = 0
offset_left = -111.0
offset_top = 123.0
offset_right = -111.0
offset_bottom = 123.0
scale = Vector2(2.435, 2.435)
script = ExtResource("4_a8k66")

[node name="activeSprite" type="Node2D" parent="BoxContainer/Buttons/ButtonSystem2"]

[node name="leftSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem2/activeSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(16, 16)
texture = ExtResource("5_injyp")

[node name="middleSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem2/activeSprite"]
texture_filter = 3
texture_repeat = 1
position = Vector2(51, 16)
scale = Vector2(2.245, 1)
texture = ExtResource("6_75no1")

[node name="rightSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem2/activeSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(87, 16)
texture = ExtResource("7_ehd31")

[node name="normalSprite" type="Node2D" parent="BoxContainer/Buttons/ButtonSystem2"]

[node name="leftSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem2/normalSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(16, 16)
texture = ExtResource("8_wilbo")

[node name="middleSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem2/normalSprite"]
texture_filter = 3
texture_repeat = 1
position = Vector2(51, 16)
scale = Vector2(2.245, 1)
texture = ExtResource("9_epewn")

[node name="rightSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem2/normalSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(87, 16)
texture = ExtResource("10_0l1n5")

[node name="button" type="Button" parent="BoxContainer/Buttons/ButtonSystem2"]
texture_filter = 5
texture_repeat = 1
layout_mode = 1
offset_right = 103.0
offset_bottom = 32.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.76662, 0.76662, 0.76662, 1)
theme_override_fonts/font = ExtResource("3_j0531")
text = "setting"
flat = true

[node name="ButtonSystem3" type="Control" parent="BoxContainer/Buttons"]
anchors_preset = 0
offset_left = -111.0
offset_top = 224.0
offset_right = -111.0
offset_bottom = 224.0
scale = Vector2(2.435, 2.435)
script = ExtResource("4_a8k66")

[node name="activeSprite" type="Node2D" parent="BoxContainer/Buttons/ButtonSystem3"]

[node name="leftSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem3/activeSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(16, 16)
texture = ExtResource("5_injyp")

[node name="middleSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem3/activeSprite"]
texture_filter = 3
texture_repeat = 1
position = Vector2(51, 16)
scale = Vector2(2.245, 1)
texture = ExtResource("6_75no1")

[node name="rightSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem3/activeSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(87, 16)
texture = ExtResource("7_ehd31")

[node name="normalSprite" type="Node2D" parent="BoxContainer/Buttons/ButtonSystem3"]

[node name="leftSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem3/normalSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(16, 16)
texture = ExtResource("8_wilbo")

[node name="middleSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem3/normalSprite"]
texture_filter = 3
texture_repeat = 1
position = Vector2(51, 16)
scale = Vector2(2.245, 1)
texture = ExtResource("9_epewn")

[node name="rightSprite" type="Sprite2D" parent="BoxContainer/Buttons/ButtonSystem3/normalSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(87, 16)
texture = ExtResource("10_0l1n5")

[node name="button" type="Button" parent="BoxContainer/Buttons/ButtonSystem3"]
texture_filter = 5
texture_repeat = 1
layout_mode = 1
offset_right = 103.0
offset_bottom = 32.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.76662, 0.76662, 0.76662, 1)
theme_override_fonts/font = ExtResource("3_j0531")
text = "exit"
flat = true

[node name="Control" type="Control" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HSlider" type="HSlider" parent="BoxContainer/Control"]
layout_mode = 0
offset_left = -191.0
offset_top = 178.0
offset_right = 209.0
offset_bottom = 198.0
value = 100.0

[node name="Label" type="Label" parent="BoxContainer/Control"]
texture_filter = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.44
offset_top = 105.0
offset_right = 90.56
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(79.44, 0)
theme_override_fonts/font = ExtResource("3_j0531")
theme_override_font_sizes/font_size = 37
text = "volume"

[node name="InterfaceWindows" type="Sprite2D" parent="."]
position = Vector2(182, 469)
scale = Vector2(1.38436, 1.38436)
texture = ExtResource("13_3e814")
region_enabled = true
region_rect = Rect2(1339, 734, 241, 227)

[node name="Label3" type="Label" parent="InterfaceWindows"]
texture_filter = 5
texture_repeat = 1
offset_left = -137.97
offset_top = -109.076
offset_right = 147.03
offset_bottom = 109.924
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_j0531")
theme_override_font_sizes/font_size = 12
text = "Players gain the ability
 to go back in time. 
But what remains in 
his memory is just 
a fountain. 
Player use his abilities to
 run toward the fountain,
avoiding obstacles and
 enemies in a world that
 coexists with music."
horizontal_alignment = 1
vertical_alignment = 1

[node name="InterfaceWindows2" type="Sprite2D" parent="."]
position = Vector2(954, 469)
scale = Vector2(1.384, 1.384)
texture = ExtResource("13_3e814")
region_enabled = true
region_rect = Rect2(1339, 734, 241, 227)

[node name="Label3" type="Label" parent="InterfaceWindows2"]
texture_filter = 5
texture_repeat = 1
offset_left = -138.728
offset_top = -108.382
offset_right = 146.272
offset_bottom = 110.618
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_j0531")
theme_override_font_sizes/font_size = 16
text = "credits

Team time rewinders

kimbyungwook
parkjiheon
sohyeongbeen
jeongjeahoon
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="BoxContainer/Buttons/ButtonSystem/button" to="BoxContainer/Buttons/ButtonSystem" method="_on_button_button_down"]
[connection signal="button_up" from="BoxContainer/Buttons/ButtonSystem/button" to="BoxContainer/Buttons/ButtonSystem" method="_on_button_button_up"]
[connection signal="pressed" from="BoxContainer/Buttons/ButtonSystem/button" to="." method="_on_button_pressed_1"]
[connection signal="pressed" from="BoxContainer/Buttons/ButtonSystem/button" to="BoxContainer/Buttons/ButtonSystem" method="_on_button_pressed"]
[connection signal="button_down" from="BoxContainer/Buttons/ButtonSystem2/button" to="BoxContainer/Buttons/ButtonSystem2" method="_on_button_button_down"]
[connection signal="button_up" from="BoxContainer/Buttons/ButtonSystem2/button" to="BoxContainer/Buttons/ButtonSystem2" method="_on_button_button_up"]
[connection signal="pressed" from="BoxContainer/Buttons/ButtonSystem2/button" to="." method="_on_button_pressed_2"]
[connection signal="pressed" from="BoxContainer/Buttons/ButtonSystem2/button" to="BoxContainer/Buttons/ButtonSystem2" method="_on_button_pressed"]
[connection signal="button_down" from="BoxContainer/Buttons/ButtonSystem3/button" to="BoxContainer/Buttons/ButtonSystem3" method="_on_button_button_down"]
[connection signal="button_up" from="BoxContainer/Buttons/ButtonSystem3/button" to="BoxContainer/Buttons/ButtonSystem3" method="_on_button_button_up"]
[connection signal="pressed" from="BoxContainer/Buttons/ButtonSystem3/button" to="." method="_on_button_pressed_3"]
[connection signal="pressed" from="BoxContainer/Buttons/ButtonSystem3/button" to="BoxContainer/Buttons/ButtonSystem3" method="_on_button_pressed"]
[connection signal="value_changed" from="BoxContainer/Control/HSlider" to="." method="_on_h_slider_value_changed"]
